заменить фильтры list.size()